@@ -1,3 +1,7 @@
+2008-01-28  Jonathan Pryor  <jpryor@novell.com>
+
+	* Mono.Posix.dll.sources: Add Mono.Unix/UnixSignal.cs.
+
 2006-10-24  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Makefile: Don't build make-map.exe.
